<resources>
    <string name="app_name">Local to Vocal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="api_key">AIzaSyBJDITUc81Fks2JG3ql6T9gzM1499Pq6Eo</string>
    <string name="error">Google Api key is missing.</string>
    <string name="facebook_app_id">1011232515983192</string>
    <string name="fb_login_protocol_scheme">fb297800690726297</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="file_selected">File Selected</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="local_to_vocal">Local to Vocal</string>
    <string name="city">City</string>
    <string name="local_for_vocal">Local for Vocal</string>

    //hindi
    <string name="profile">प्रोफ़ाइल</string>
    <string name="settings">प्रोफ़ाइल</string>
    <string name="home">प्रोफ़ाइल</string>
    <string name="subscriptions">प्रोफ़ाइल</string>
    <string name="local">प्रोफ़ाइल</string>
    <string name="news">प्रोफ़ाइल</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? Signup</string>
    <string name="facebook">Facebook</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_local_to_vocal">Login Local to Vocal</string>
    <string name="let_s_get_started">Let\'s get Started</string>
    <string name="choose_your_plan">Choose your plan</string>
    <string name="submit_">Submit</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="no_data_found">No data found</string>
    <string name="already_shown">Already Shown</string>
    <string name="request">Request Tag</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="enter_your_tag">Enter your tag</string>
    <string name="your_request_has_been_successfully_submitted">Your request has been successfully submitted</string>
    <string name="what_s_app">What\'s App</string>
    <string name="enter_your_description">Enter your description</string>
    <string name="email_has_been_successfully_sent">Email has been successfully sent</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>


</resources>