<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_2"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/os_semibold"
            android:text="@string/let_s_get_started"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="20dp"
            android:src="@drawable/l" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/os_regular"
            android:text="@string/login_local_to_vocal"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">


            <ImageView
                android:id="@+id/image1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="15dp"
                android:src="@drawable/email" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="15dp"
                android:background="@null"
                android:fontFamily="@font/os_italic"
                android:hint="@string/email" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/colorPrimary" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">


            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="15dp"
                android:src="@drawable/pass" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="15dp"
                android:background="@null"
                android:fontFamily="@font/os_italic"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/colorPrimary" />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_orange"
            android:elevation="10dp"
            android:fontFamily="@font/os_semibold"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/forgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="15dp"
            android:fontFamily="@font/os_regular"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="14sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/google"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:onClick="onClick"
                android:padding="20dp"
                android:src="@drawable/google" />


            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/fb"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_toEndOf="@id/google"
                android:onClick="onClick"
                android:padding="20dp"
                android:src="@drawable/facebook" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_toRightOf="@+id/google"
                android:text="@string/facebook"
                android:visibility="gone" />
        </RelativeLayout>




    </LinearLayout>


    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:padding="10dp"
        android:fontFamily="@font/os_semibold"
        android:text="@string/don_t_have_an_account_signup"
        android:textColor="@color/white"
        android:textSize="14sp" />


    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progress"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:SpinKit_Color="@color/colorAccent" />


    <RelativeLayout
        android:id="@+id/facebookAnimation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/white">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            app:lottie_autoPlay="true"
            app:lottie_fileName="facebookani.json"
            app:lottie_loop="true" />

    </RelativeLayout>


</RelativeLayout>