<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SearchUsersActivity">


    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimary">

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_toLeftOf="@id/imgFilter"
            app:cardCornerRadius="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgsearch"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="13dp"
                    android:src="@drawable/ssssearch" />

                <EditText
                    android:id="@+id/etSearch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/imgsearch"
                    android:background="@null"
                    android:fontFamily="@font/os_semibold"
                    android:hint="@string/what_are_you_looking_for"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:paddingStart="5dp"
                    android:paddingEnd="10dp"
                    android:textSize="14sp" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>


        <ImageView
            android:id="@+id/imgFilter"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="7dp"
            android:src="@drawable/filter_slider" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/card"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="15dp"
            android:layout_toStartOf="@id/imgFilter"
            app:cardCornerRadius="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <Spinner
                    android:id="@+id/spinnerTagSearch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/os_semibold"
                    android:hint="@string/enter_your_tag"
                    android:imeOptions="actionSearch"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp"
                    android:textSize="14sp" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rel">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:overScrollMode="never"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/localRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            />


    </RelativeLayout>




    <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progress"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:SpinKit_Color="@color/colorAccent" />


    <RelativeLayout
        android:id="@+id/rel_notfound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_below="@id/rel">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/os_bold"
            android:text="@string/no_data_found"
            android:textColor="@color/black"
            android:textSize="26sp" />


    </RelativeLayout>

</RelativeLayout>